# rcol

./: .gitignore  Cargo.toml  README.html  README.md  repro_ansi.rs  test_data_02.txt  test_data_03.txt
doc/: .rustc_info.json  rcol_doc.md
doc/debug/.fingerprint/aho-corasick-cc2d4a24cbeb7e5b/: lib-aho_corasick  lib-aho_corasick.json
doc/debug/.fingerprint/csv-84dcdda8160d70c2/: lib-csv  lib-csv.json
doc/debug/.fingerprint/csv-core-56bc3654f32c78d7/: lib-csv_core  lib-csv_core.json
doc/debug/.fingerprint/itoa-5464c517accf7a26/: lib-itoa  lib-itoa.json
doc/debug/.fingerprint/memchr-716f0fe60b1a2f77/: lib-memchr  lib-memchr.json
doc/debug/.fingerprint/rcol-4312bb600fcdbc21/: doc-bin-rcol  doc-bin-rcol.json
doc/debug/.fingerprint/regex-58ac3800c315fb75/: lib-regex  lib-regex.json
doc/debug/.fingerprint/regex-automata-cd902cf7bb778459/: lib-regex_automata  lib-regex_automata.json
doc/debug/.fingerprint/regex-syntax-3c02c2619e360563/: lib-regex_syntax  lib-regex_syntax.json
doc/debug/.fingerprint/ryu-09b181dadcf8bb5c/: lib-ryu  lib-ryu.json
doc/debug/.fingerprint/serde-48ef1c5d15159f83/: lib-serde  lib-serde.json
doc/doc/: crates.js  help.html  settings.html  src-files.js
doc/doc/rcol/: all.html  fn.main.html  fn.print_help.html  fn.print_man.html  index.html  sidebar-items.js
doc/doc/rcol/args/: fn.parse_args.html  (+4 more)
doc/doc/search.index/: 04ee559cce49.js  root.js
src/: args.rs  formatter.rs  input.rs  lib.rs  main.rs  processor.rs
tests/: args_tests.rs  integration_tests.rs
tests/data/: grouping.txt  irregular.txt  numeric.txt  simple.txt
(+58 files in other folders)
